# a-jornada-das-trevas-clang

./: .clangd  .gitignore  CMakeLists.txt  README.md  debug.c  debug.h  enemy.c  enemy.h  ground.c  ground.h  main.c  physics.c  physics.h  player.c  player.h
assets/data/levels/: map.json  phase1.json
src/: camera.c  camera.h  combat.c  combat.h  config.h  debug.c  debug.h  enemy.c  enemy.h  game.c  game.h  gameState.h  infobar.c  infobar.h  main.c  map.c  map.h  physics.c  physics.h  player.c  player.h  playerStats.c  playerStats.h  startMenu.c  startMenu.h  textureLoader.c  textureLoader.h  tiles.c  tiles.h  titleScreen.c  titleScreen.h
